# gaiaflow

./: 404.html  CHANGES.md  MANIFEST.in  README.md  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: gh_deploy.yml  publish.yml  unittest.yml
assets/mlfow_introduction/: index.html
cli_ref/: index.html
dev/: index.html
dev_guide/: index.html
docs/: cli_ref.md  dev_guide.md  index.md  prod_guide.md  start.md
getting_started/: index.html
prod/: index.html
prod_guide/: index.html
search/: search_index.json
src/docker/: kube_config_inline
src/docker/airflow/: Dockerfile
src/docker/docker-compose/: docker-compose.yml  entrypoint.sh
src/docker/mlflow/: Dockerfile
src/docker/user-package/: Dockerfile
src/docker_stuff/airflow/: Dockerfile
src/docker_stuff/docker-compose/: docker-compose.yml
src/gaiaflow/: cli.py  constants.py  utils.py
src/gaiaflow/cli/: cli.py
src/gaiaflow/cli/commands/: minikube.py  mlops.py
src/gaiaflow/commands/: minikube.py  mlflow_model.py  mlops.py
src/gaiaflow/core/: create_task.py  operators.py  runner.py  utils.py
src/gaiaflow/managers/: base_manager.py  minikube_manager.py  mlflow_model_manager.py  mlops_manager.py  utils.py
start/: index.html
tests/core/: test_utils.py
tutorial/: index.html
