[project]
authors = [{name = "Yogesh Kumar Baljeet Singh", email = "yogesh09121995@gmail.com"}]
dependencies = []
name = "gaiaflow"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
gaiaflow = { path = ".", editable = true }
# Dev tools
isort = "*"
mypy = "*"
pytest = "*"
ruff = "*"

[tool.pixi.tasks]
test = "pytest tests"
format = "isort src/gaiaflow && ruff format src/gaiaflow"
check = "ruff check src/gaiaflow"
typecheck = "mypy src/gaiaflow"

[tool.pixi.dependencies]
typer = ">=0.16.0,<0.17"
fsspec = ">=2025.7.0,<2026"
pixi-pycharm = ">=0.0.8,<0.0.9"
"ruamel.yaml" = ">=0.18.14,<0.19"
psutil = ">=7.0.0,<8"

[project.scripts]
gaiaflow = "gaiaflow.cli:app"
