[project]
authors = [{name = "Yogesh Kumar Baljeet Singh", email = "yogesh09121995@gmail.com"}]
dependencies = []
name = "gaiaflow"
requires-python = ">= 3.11"
version = "0.0.1.dev0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
gaiaflow = { path = ".", editable = true }
# Dev tools
isort = "*"
mypy = "*"
pytest = "*"
ruff = "*"

[tool.pixi.tasks]
test = "pytest tests"
format = "isort src/gaiaflow && ruff format src/gaiaflow"
check = "ruff check src/gaiaflow --fix"
typecheck = "mypy src/gaiaflow"

[tool.pixi.dependencies]
typer = ">=0.16.0,<0.17"
fsspec = ">=2025.7.0,<2026"
pixi-pycharm = ">=0.0.8,<0.0.9"
"ruamel.yaml" = ">=0.18.14,<0.19"
psutil = ">=7.0.0,<8"
pyyaml = ">=6.0.2,<7"
apache-airflow = ">=3.0.3,<4"
apache-airflow-providers-cncf-kubernetes = ">=10.6.2,<11"
apache-airflow-providers-amazon = ">=9.11.0,<10"
apache-airflow-providers-fab = ">=2.3.1,<3"
apache-airflow-providers-docker = ">=4.4.2,<5"
mlflow = ">=3.2.0,<4"

[project.scripts]
gaiaflow = "gaiaflow.cli.cli:app"

[[tool.mypy.overrides]]
module = "kubernetes.client.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fsspec.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "psutil.*"
ignore_missing_imports = true
